# SecPloit

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.control  Dockerfile.runner  LICENSE  Makefile  README.md  RELEASE.md  SECPL0IT_BUILD_LOCK  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  scanner.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  materialize-v2.yml  packages.yml  qa.yml  release.yml
.secploit-bootstrap/: part00  part01  part02  part03  part04  part05  part06  part07
app/: __init__.py  agent.py  api.py  campaigns.py  config.py  evaluation.py  llm.py  models.py  orchestrator.py  policy.py  runner.py  runner_client.py  store.py
app/static/: app.js  index.html  style.css
benchmarks/: ground_truth_example.json  run_benchmark.py  scenarios.json
docs/: ARCHITECTURE.md  LONG_HORIZON_RESEARCH.md  THREAT_MODEL.md
runner/: __init__.py  api.py  browser_cli.py  docker_backend.py  models.py
scripts/: qa_smoke.py
tests/: test_browser_cli.py  test_campaigns.py  test_evaluation.py  test_llm.py  test_orchestrator.py  test_policy.py  test_store.py
tools/: materialize_v2.py
