[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secploit"
version = "2.0.0"
description = "Autonomous, evidence-driven security research for isolated cyber ranges"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ChathurangaBW" }]
dependencies = [
  "docker>=7.1.0,<8",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "openai>=1.100,<2",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
secploit = "scanner:main"

[tool.setuptools]
py-modules = ["scanner"]

[tool.setuptools.packages.find]
include = ["app*", "runner*"]

[tool.setuptools.package-data]
app = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
